--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,23 @@
         <content.encoding>utf-8</content.encoding>
 
         <finalname>ldap</finalname>
+
+        <unboundid.version>4.0.7</unboundid.version>
+        <lombok.version>1.18.2</lombok.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.unboundid</groupId>
+            <artifactId>unboundid-ldapsdk</artifactId>
+            <version>${unboundid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <finalName>${project.artifactId}</finalName>
@@ -57,5 +73,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
