--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
 
         <unboundid.version>4.0.7</unboundid.version>
         <lombok.version>1.18.2</lombok.version>
+
+        <maven-compiler.version>3.8.0</maven-compiler.version>
+        <maven-assembly.version>3.1.0</maven-assembly.version>
     </properties>
 
     <dependencies>
@@ -44,6 +47,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler.version}</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
@@ -51,6 +55,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>${maven-assembly.version}</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
