--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
         <compile.debug>true</compile.debug>
         <compile.optimize>true</compile.optimize>
@@ -21,8 +21,9 @@
 
         <finalname>ldap</finalname>
 
-        <unboundid.version>4.0.7</unboundid.version>
-        <lombok.version>1.18.2</lombok.version>
+        <unboundid.version>4.0.11</unboundid.version>
+        <lombok.version>1.18.8</lombok.version>
+        <jaxws.version>2.3.2</jaxws.version>
 
         <maven-compiler.version>3.8.0</maven-compiler.version>
         <maven-assembly.version>3.1.0</maven-assembly.version>
@@ -34,6 +35,12 @@
             <artifactId>unboundid-ldapsdk</artifactId>
             <version>${unboundid.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-ri</artifactId>
+            <version>${jaxws.version}</version>
+            <type>pom</type>
+        </dependency>      
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
