--- a/pom.xml
+++ b/pom.xml
@@ -24,23 +24,29 @@
         <unboundid.version>4.0.11</unboundid.version>
         <lombok.version>1.18.8</lombok.version>
         <jaxws.version>2.3.2</jaxws.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>        
 
         <maven-compiler.version>3.8.0</maven-compiler.version>
-        <maven-assembly.version>3.1.0</maven-assembly.version>
+        <maven-assembly.version>3.1.1</maven-assembly.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.unboundid</groupId>
-            <artifactId>unboundid-ldapsdk</artifactId>
-            <version>${unboundid.version}</version>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api.version}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-ri</artifactId>
             <version>${jaxws.version}</version>
             <type>pom</type>
-        </dependency>      
+        </dependency>              
+        <dependency>
+            <groupId>com.unboundid</groupId>
+            <artifactId>unboundid-ldapsdk</artifactId>
+            <version>${unboundid.version}</version>
+        </dependency>   
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
