--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,16 @@
 
     <groupId>ru.ak</groupId>
     <artifactId>ldapclient</artifactId>
-    <version>1.0</version>
+    <version>1.0.0.10</version>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>comp-java-ldapclient</name>
+            <url>https://maven.pkg.github.com/alexandrkakushin/comp-java-ldapclient</url>
+        </repository>
+    </distributionManagement>         
+         
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
